[gd_scene load_steps=24 format=3 uid="uid://c1br1daxc4edk"]

[ext_resource type="Script" uid="uid://diiia1115w3n" path="res://games/flappy_bird/flappy_bird.gd" id="1_gwxte"]
[ext_resource type="Texture2D" uid="uid://b47mg6lc7t6d6" path="res://games/flappy_bird/res/sprites/background-day.png" id="1_l662m"]
[ext_resource type="Texture2D" uid="uid://bsbfbcxo816oi" path="res://games/flappy_bird/res/sprites/base.png" id="2_nqbp5"]
[ext_resource type="PackedScene" uid="uid://bl68f8ciotejk" path="res://games/flappy_bird/pipes.tscn" id="2_t20oy"]
[ext_resource type="Script" uid="uid://bw7wekqn4v5tt" path="res://games/flappy_bird/bird.gd" id="4_tg51r"]
[ext_resource type="PackedScene" uid="uid://s4h0qesng7se" path="res://ui_components/button_back.tscn" id="5_73rm6"]
[ext_resource type="Texture2D" uid="uid://b574gsllqtfxx" path="res://games/flappy_bird/res/sprites/bluebird-upflap.png" id="5_t20oy"]
[ext_resource type="Texture2D" uid="uid://231yjy4jo3ey" path="res://games/flappy_bird/res/sprites/bluebird-midflap.png" id="6_vtv0f"]
[ext_resource type="Texture2D" uid="uid://b102sxjd2m204" path="res://games/flappy_bird/res/sprites/bluebird-downflap.png" id="7_v2mx0"]
[ext_resource type="AudioStream" uid="uid://cmy48by3cg7qr" path="res://games/flappy_bird/res/audio/wing.wav" id="9_v2mx0"]
[ext_resource type="FontFile" uid="uid://cfhtunelpi0y0" path="res://games/flappy_bird/res/04B_19.TTF" id="9_vtv0f"]
[ext_resource type="AudioStream" uid="uid://c7bg8a1dvg8kr" path="res://games/flappy_bird/res/audio/hit.wav" id="11_s8ltg"]
[ext_resource type="AudioStream" uid="uid://b5m0u0rxlvtu6" path="res://games/flappy_bird/res/audio/die.wav" id="12_4w60i"]
[ext_resource type="Texture2D" uid="uid://cximsi48607ly" path="res://graphics/arrow_back.png" id="14_2nvtn"]
[ext_resource type="Texture2D" uid="uid://dgxyuv4kwtvy8" path="res://games/flappy_bird/res/sprites/message.png" id="14_m6x5j"]
[ext_resource type="Texture2D" uid="uid://b5dos7yspnjxf" path="res://games/flappy_bird/res/sprites/gameover.png" id="16_kglkp"]
[ext_resource type="Texture2D" uid="uid://b6dews48nl6ex" path="res://games/flappy_bird/res/sprites/score_bg.png" id="17_yej46"]
[ext_resource type="FontFile" uid="uid://d3rb01eqt6j05" path="res://fonts/baloo.ttf" id="18_hkuvp"]
[ext_resource type="Theme" uid="uid://csn8r8e58m7eh" path="res://liss_theme.tres" id="19_joo0a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t20oy"]
size = Vector2(480, 145)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8ltg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_t20oy")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.8,
"texture": ExtResource("6_vtv0f")
}, {
"duration": 1.8,
"texture": ExtResource("5_t20oy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_v2mx0")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4w60i"]
radius = 24.0
height = 66.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kcyq4"]
texture = ExtResource("17_yej46")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0

[node name="FlappyBird" type="Node2D"]
script = ExtResource("1_gwxte")
pipe_scene = ExtResource("2_t20oy")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -51.0
offset_top = -164.0
offset_right = 237.0
offset_bottom = 348.0
scale = Vector2(2, 2)
texture = ExtResource("1_l662m")

[node name="Floor" type="Node2D" parent="."]
z_index = 1

[node name="Parallax2D" type="Parallax2D" parent="Floor"]
repeat_size = Vector2(672, 0)
autoscroll = Vector2(-200, 0)
repeat_times = 2
follow_viewport = false
ignore_camera_scroll = true

[node name="Base" type="Sprite2D" parent="Floor/Parallax2D"]
texture_filter = 1
position = Vector2(247, 767)
scale = Vector2(2, 2)
texture = ExtResource("2_nqbp5")

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
position = Vector2(240, 731.305)
shape = SubResource("RectangleShape2D_t20oy")
one_way_collision = true

[node name="Hitbox" type="Area2D" parent="Floor/StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D/Hitbox"]
position = Vector2(240, 728)
shape = SubResource("RectangleShape2D_t20oy")

[node name="Ceiling" type="Node2D" parent="."]
z_index = 1

[node name="Hitbox" type="Area2D" parent="Ceiling"]
position = Vector2(0, -55)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling/Hitbox"]
position = Vector2(240, -30)
shape = SubResource("RectangleShape2D_t20oy")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(616, 350)

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Bird" type="CharacterBody2D" parent="."]
position = Vector2(116, 250)
script = ExtResource("4_tg51r")
jump_speed = 700

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bird"]
texture_filter = 1
position = Vector2(2, -2)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_s8ltg")
animation = &"fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
position = Vector2(1, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4w60i")
one_way_collision = true
one_way_collision_margin = 10.7

[node name="FlapSound" type="AudioStreamPlayer" parent="Bird"]
stream = ExtResource("9_v2mx0")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_s8ltg")

[node name="FallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_4w60i")

[node name="Pipes" type="Node2D" parent="."]

[node name="ButtonBack" parent="." instance=ExtResource("5_73rm6")]
offset_left = 16.0
offset_top = 11.0
offset_right = 72.0
offset_bottom = 67.0
theme = null
text = ""
icon = ExtResource("14_2nvtn")
flat = true

[node name="Overlay" type="Node2D" parent="."]

[node name="GameInit" type="Node2D" parent="Overlay"]

[node name="TextureSplash" type="TextureRect" parent="Overlay/GameInit"]
texture_filter = 1
offset_left = 61.0
offset_top = 98.0
offset_right = 245.0
offset_bottom = 365.0
scale = Vector2(2, 2)
texture = ExtResource("14_m6x5j")

[node name="GameRunning" type="Node2D" parent="Overlay"]
visible = false

[node name="Score" type="Label" parent="Overlay/GameRunning"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 206.0
offset_top = 97.0
offset_right = 291.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("9_vtv0f")
theme_override_font_sizes/font_size = 81
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" type="Node2D" parent="Overlay"]
visible = false

[node name="TextureGameOver" type="TextureRect" parent="Overlay/GameOver"]
texture_filter = 1
offset_left = 50.0
offset_top = 68.0
offset_right = 242.0
offset_bottom = 110.0
scale = Vector2(2, 2)
texture = ExtResource("16_kglkp")

[node name="LabelFinalScore" type="Label" parent="Overlay/GameOver"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 206.0
offset_top = 179.0
offset_right = 291.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("9_vtv0f")
theme_override_font_sizes/font_size = 81
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureHighScore" type="Button" parent="Overlay/GameOver"]
texture_filter = 1
offset_left = 62.0
offset_top = 304.0
offset_right = 420.0
offset_bottom = 490.0
theme_override_styles/disabled = SubResource("StyleBoxTexture_kcyq4")
disabled = true

[node name="LabelHSTitle" type="Label" parent="Overlay/GameOver/TextureHighScore"]
layout_mode = 0
offset_left = 101.0
offset_top = 20.0
offset_right = 270.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0.42005, 0.223138, 0.0691705, 1)
theme_override_fonts/font = ExtResource("9_vtv0f")
theme_override_font_sizes/font_size = 32
text = "High Score"

[node name="LabelHSFirst" type="Label" parent="Overlay/GameOver/TextureHighScore"]
layout_mode = 0
offset_left = 17.0
offset_top = 63.0
offset_right = 340.0
offset_bottom = 102.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("18_hkuvp")
theme_override_font_sizes/font_size = 24
text = "12 - Lisse Spexlund"

[node name="LabelHSSecond" type="Label" parent="Overlay/GameOver/TextureHighScore"]
layout_mode = 0
offset_left = 17.0
offset_top = 97.0
offset_right = 340.0
offset_bottom = 136.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("18_hkuvp")
theme_override_font_sizes/font_size = 24
text = "10 - Häggmyr"

[node name="LabelHSThird" type="Label" parent="Overlay/GameOver/TextureHighScore"]
layout_mode = 0
offset_left = 17.0
offset_top = 132.0
offset_right = 340.0
offset_bottom = 171.0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("18_hkuvp")
theme_override_font_sizes/font_size = 24
text = "8 - Gamla Lisse"

[node name="LabelInstructions" type="Label" parent="Overlay/GameOver"]
offset_left = 24.0
offset_top = 538.0
offset_right = 454.0
offset_bottom = 619.0
theme = ExtResource("19_joo0a")
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("18_hkuvp")
theme_override_font_sizes/font_size = 22
text = "Blippa din tagg för att spara din high score
Tryck på den blå knappen för att spela igen"

[connection signal="game_over" from="." to="Bird" method="_on_flappy_bird_game_over"]
[connection signal="game_start" from="." to="Bird" method="_on_flappy_bird_game_start"]
[connection signal="body_entered" from="Floor/StaticBody2D/Hitbox" to="." method="_on_bounds_hit" binds= [true]]
[connection signal="body_entered" from="Ceiling/Hitbox" to="." method="_on_bounds_hit" binds= [false]]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
